2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/win32/VC7/gameswf.vcproj: added Visual Studio 2003 
	project file. Release will be done on VC7

2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.h: optimization & cleanup

2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_action.cpp: added \n in log_msg()
	* gameswf/gameswf_sound_handler.(cpp,h): fixed bug leading to
	infinite playing of sound
	* gameswf/gameswf_shape.cpp: there are problems with NEW TESSELATOR:
	because "#define USE_NEW_TESSELATOR" is commented
	* gameswf/gameswf_movie_def.cpp: removed ifdef USE_SEPARATE_THREAD
	

2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_movie_def.cpp: added ifdef USE_SEPARATE_THREAD,
	there is problem while loading movies in separate thread
	assert(vi2 != vi0) in line 982, file ear_clip_triangulate_impl.h;
	during displaying static text, new release will be put
	after fixing this problem

2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sound_handler.(cpp,h): rewrited mixer,
	It is decoded only so much samples how much to be located in 
	the handler buffer (required for stream sound)

2007-03-20  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: 
	added sound stream tag loaders & sound stream handler

2007-03-18  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.cpp: fixed hitTest(),
	It was necessary to use get_world_matrix() to find screen coordinates

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.(cpp,h),
	* gameswf/gameswf_as_sprite.(cpp,h): added hitTest() method
	* gameswf/gameswf_as_classes/as_color.(cpp,h): added comments

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf.h,
	* gameswf/gameswf_movie.h,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_as_classes/as_color.(cpp,h),
	* gameswf/win32/VC8/gameswf.vcproj:
	added the part of Color() Action Script class
	