@@ -1,3 +1,9 @@
+2007-03-25  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* base/utility.h: added assert() for SVN_RELEASE which
+	will help users to send messages about bugs
+	* base/postscipt.(cpp,h): removed from projects because it is't used
+
 2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* gameswf/win32/VC7/gameswf.vcproj: added Visual Studio 2003 
